# SleakEngine-FPP

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  DOCKERGUIDE.TXT  Dockerfile.linux  Dockerfile.windows  LICENSE  README.md
Client/: CMakeLists.txt
Client/src/: main.cpp
Game/: CMakeLists.txt
Game/include/: Game.hpp  MainScene.hpp
Game/src/: Game.cpp  MainScene.cpp
docs/: SCENE_SYSTEM_GUIDE.md
scripts/: build.bat  build.sh  buildrun.sh  buildsdl.bat  buildsdl.sh  compile_shaders.sh
